--- a/app/src/App.css
+++ b/app/src/App.css
@@ -176,6 +176,11 @@ ul {
   background-repeat: no-repeat;
 }
 
+.container.alternative-bg {
+  background: rgb(2,0,36);
+  background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(9,10,121,1) 45%, rgba(255,254,0,1) 100%);
+}
+
 .container {
   text-align: center;
 }
@@ -238,3 +243,40 @@ ul {
   margin-left: .75rem;
 }
 
+
+/* COMPONENT EXERCISE */
+
+.card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #e3feff
+}
+
+.card-container h1 {
+  color: black;
+}
+
+.card-wrapper {
+  display: flex;
+  gap: 2%;
+  background-color: #fafafa;
+  box-shadow: 2px 2px 10px rgba(0,0,0, 0.3);
+  padding: 0.25rem;
+}
+
+.card-image {
+  flex-basis: 24%;
+}
+
+.card-content {
+  flex-basis: 74%;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
